--- a/docker_test/arp_test/Dockerfile
+++ b/docker_test/arp_test/Dockerfile
@@ -4,7 +4,7 @@ ARG TARGET_IP
 ENV TARGET_IP=${TARGET_IP}
 
 RUN apt update -y
-RUN apt install arping net-tools tcpdump -y
+RUN apt install arping net-tools tcpdump iputils-ping -y
 
 COPY run.sh /usr/local/bin/start.sh
 RUN chmod +x /usr/local/bin/start.sh
